[project]
name = "AstroSASF"
version = "4.0.0"
description = "Astro Scientific Agent Scheduling Framework — 面向太空实验室的科学智能体调度框架"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
astrosasf-demo = "examples.space_station_demo:main"
